@@ -2,10 +2,11 @@ language-puppet (1.4.1) UNRELEASED; urgency=medium
 
   * Add the `with` function.
   * Add the `assert_type` function.
+  * Add casting string into integer with Integer("12") (See #255)
+  * Add hiera environment layer lookup
   * Change [Puppet 4] empty strings in boolean context are true (See #205).
   * Fix regex variable resolution (See #248).
   * Fix missing fail on extra spaces (See #187)
-  * Support casting string into integer with Integer("12") (See #255)
 
  -- Simon Marechal <simon.marechal@edf.fr>  Thu, 13 Sep 2018 15:54:03 +0200
 
